--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,12 @@
-
+<html>
+  <head>
+    <title> primeira página </title>
+    </head>
+    <body>
+        <h1> primeira página </h1>
+        <ul>
+          <li>nome:Amanda </li>
+          <li>idade:15</li>
+          </lu>
+       </body>
+      </html>
